sanger/sites/pan-immune/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pan-immune
spec:
  selector:
    matchLabels:
      app: pan-immune
  replicas: 1
  template:
    metadata: 
      name: pan-immune
      labels:
        app: pan-immune
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: pan-immune
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/pan-immune/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pan-immune-global
spec:
  selector:
    matchLabels:
      app: pan-immune-global
  replicas: 1
  template:
    metadata: 
      name: pan-immune-global
      labels:
        app: pan-immune-global
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pan-immune-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: pan-immune-global
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_PIP-B-Z15-7.h5ad", "-t", "Global", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "3Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pan-immune-t-cells
spec:
  selector:
    matchLabels:
      app: pan-immune-t-cells
  replicas: 1
  template:
    metadata: 
      name: pan-immune-t-cells
      labels:
        app: pan-immune-t-cells
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pan-immune-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: pan-immune-t-cells
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_PIP-B_T-all_20191128.h5ad", "-t", "T cells", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "3Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pan-immune-spleen
spec:
  selector:
    matchLabels:
      app: pan-immune-spleen
  replicas: 1
  template:
    metadata: 
      name: pan-immune-spleen
      labels:
        app: pan-immune-spleen
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pan-immune-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: pan-immune-t-cells
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_PIP-B_SPL.h5ad", "-t", "Spleen", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "3Gi"
            cpu: 1
---
