sanger/sites/pan-immune/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pan-immune
  labels:
    app: pan-immune
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: pan-immune
---
apiVersion: v1
kind: Service
metadata:
  name: pan-immune-pip-b-z15-7
  labels:
    app: pan-immune-pip-b-z15-7
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: pan-immune-pip-b-z15-7
---
